# ml_fraud_detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: .gitkeep
data/: .gitkeep
reports/figures/: .gitkeep
src/fraud_detection/: __init__.py  config.py  logging_utils.py  metrics.py
src/fraud_detection/bakeoff/: __init__.py  cli.py  latency.py  plots.py  runner.py
src/fraud_detection/data/: __init__.py  cli.py  kaggle_source.py  loader.py  schema.py  split.py  synthetic.py
src/fraud_detection/eda/: __init__.py  profile.py
src/fraud_detection/models/: __init__.py  baseline.py  calibration.py  candidates.py  preprocessing.py  tuning.py
src/fraud_detection/monitoring/: __init__.py  cli.py  drift.py  metrics.py  report.py
src/fraud_detection/serving/: __init__.py  app.py  benchmark.py  bundle.py  cli.py  schemas.py
tests/: conftest.py  test_bakeoff.py  test_metrics.py  test_monitoring.py  test_serving.py  test_split.py  test_synthetic.py
