[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Real-time fraud detection service — production-grade MLOps showcase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rbelateche" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
# Heavier ML / experiment tracking — used from Phase 0.5 onward.
ml = [
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "optuna>=3.6",
    "mlflow>=2.12",
    "imbalanced-learn>=0.12",
    "tabulate>=0.9",
]
# Data acquisition from Kaggle (optional backend).
kaggle = ["kaggle>=1.6"]
# Phase 1 serving layer — FastAPI inference API + latency benchmark.
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
# Phase 4 monitoring — drift detection (PSI) + Prometheus serving metrics.
monitoring = [
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.scripts]
fraud-data = "fraud_detection.data.cli:main"
fraud-eda = "fraud_detection.eda.profile:main"
fraud-baseline = "fraud_detection.models.baseline:main"
fraud-bakeoff = "fraud_detection.bakeoff.cli:main"
fraud-serve = "fraud_detection.serving.cli:serve"
fraud-bench = "fraud_detection.serving.cli:bench"
fraud-drift = "fraud_detection.monitoring.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
